# str_enum

./: Cargo.toml  LICENSE-Apache.txt  LICENSE-MIT.txt  README.md
src/: lib.rs
tests/: phf.rs  test.rs
