[package]
name = "str_enum"
version = "0.2.0"
authors = ["Adam Stopher <adam.stopher@protonmail.com>"]
edition = "2024"
resolver = "3"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/SneedSeedFeed/str_enum.git"
description = "Simple declarative macro for an enum with associated strings for each variant"
documentation = "https://docs.rs/str_enum"
keywords = ["enum", "str_enum", "macro"]
categories = ["rust-patterns"]

[dependencies]
serde = { version = "1.0.228", default-features = false, optional = true }


[features]
serde = ["dep:serde", "serde/alloc"]

[dev-dependencies]
serde_json = "1.0.149"
