[package]
name = "str_enum"
version = "0.3.2"
authors = ["Adam Stopher <adam.stopher@protonmail.com>"]
edition = "2024"
rust-version = "1.87"
resolver = "3"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/SneedSeedFeed/str_enum.git"
description = "Simple declarative macro for an enum with associated strings for each variant"
documentation = "https://docs.rs/str_enum"
keywords = ["enum", "str_enum", "macro", "string", "declarative-macro"]
categories = ["rust-patterns"]

[dependencies]
phf = { version = "0.13.1", optional = true }
serde = { version = "1.0.228", default-features = false, optional = true }
strum = { version = "0.28.0", default-features = false, optional = true }


[features]
serde = ["dep:serde", "serde/alloc"]
strum = ["dep:strum"]
phf = ["dep:phf", "phf/macros"]

[dev-dependencies]
serde_json = "1.0.149"
